[package]
name = "rust_eth_pairing"
version = "0.1.0"
authors = ["Jared Wasinger <j-wasinger@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethereum-bn128 = { git = "https://github.com/jwasinger/ethereum-bn128.rs", branch = "roll_up" }
# ethereum-bn128 = { path = "../ethereum-bn128.rs" }
hex = "0.3.2"
num-bigint = "0.2.2"
